test/should-fail/vsgc683b.visage
/*
 * Regression test: VSGC-683: Use Visage type name rather than Java type names in error messages
 *
 * @test/compile-error
 *
 * This should produce:
 *
 *     vsgc683b.visage:32: incompatible types
 *     found   : String
 *     required: vsgc683b.Node
 *     var n:Node = "";
 *                  ^
 *     1 error
 * 
 * instead of
 * 
 *     vsgc683b.visage:32: incompatible types
 *     found   : java.lang.String
 *     required: vsgc683b.Node
 *     var n:Node = "";
 *                  ^
 *     1 error
 * 
 * There doesn't seem to be a way to provide .EXPECTED files 
 * for tests that are expected to fail compilation.
 *
 */

class Node {
}

var n:Node = "";
